--- a/html_css/homework_day2.html
+++ b/html_css/homework_day2.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html>   
 <html>
 <head>
   <title>My First HTML Page</title>
@@ -65,7 +65,7 @@
   </ol>
 
   <h2>Contact Me</h2>
-  <p>Email: <a href="swarajmahesh83@gmail.com">swarajmahesh83@gmail.com</a></p>
+  <p>Email: <a href="https://mail.google.com/mail/?view=cm&fs=1&to=swarajmahesh83@gmail.com" target="_blank">Email Me via Gmail</a></p>
   <p>Phone: 7820858979</p>
 
   <h2>Fun Facts About Me</h2>
