--- a/html_css/creative_website.html
+++ b/html_css/creative_website.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>day 6 website</title>
 </head>
-<body style="font-family: 'Poppins', sans-serif; background: #1a1a2e; color: #eaeaea; line-height: 1.6; margin: 0; padding: 0; box-sizing: border-box;">
+<body style="font-family: 'Poppins', fantasy; background: #1a1a2e; color: #eaeaea; line-height: 1.6; margin: 0; padding: 0; box-sizing: border-box;">
 
   <header style="background: #16213e; color: #fff; padding: 40px 20px 20px; text-align: center;">
     <h1 style="font-size: 28px; margin-bottom: 10px;">HTML + CSS Beginner Practice Guide</h1>
